k8s/rails-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruby-app
  namespace: bookapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruby-app
  template:
    metadata:
      labels:
        app: ruby-app
    spec:
      containers:
        - name: ruby-app
          image: rabhi03/ruby-app:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ruby-app
  namespace: bookapp
spec:
  selector:
    app: ruby-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
