k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ruby-app-ingress
  namespace: bookapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bookapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ruby-app
                port:
                  number: 3000
